meja/tests/row-empty.stderr
File "tests/row-empty.meja", line 2, characters 23-24:
Error: Incompatible types ([<`A] as 'a) and ([<`B] as 'b):
       Cannot unify ([<`A] as 'a) and ([<`B] as 'b):
       the resulting row would be empty.
